# CAMO

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-zh.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: models.yaml
design-system/camo-demo/: MASTER.md
docker/: start-api.sh  start-worker.sh
docs/: CAMO-v0.2.md  CAMO_PRD-v0.1.md  CAMO_PRD-v0.3.md  CAMO_SPEC.md  CAMO_TDD-v0.1.md  CAMO_TDD-v0.2.md  CAMO_TDD补充说明.md
examples/yue-buqun/: memories.json  portrait.json
migrations/: env.py
migrations/versions/: 20260413_0001_create_core_schema.py  20260421_0002_rename_character_payload_columns.py
prompts/extraction/: alias_disambiguation.jinja2  character_disambiguation.jinja2  character_index.jinja2  character_portrait.jinja2  character_portrait_conflict.jinja2  entity_index.jinja2
prompts/runtime/: character_chat.jinja2  consistency_check.jinja2  turn.jinja2
prompts/schemas/: character_chat.json  character_disambiguation.json  character_portrait.json  character_portrait_conflict.json  character_portrait_extraction.json  (+3 more)
tests/: conftest.py  test_api_health.py  test_consistency.py  test_db_models.py  test_demo_page.py  test_examples.py  test_model_adapter.py  test_model_config.py  test_modeling_progress.py  test_pass1.py  test_pass1_disambiguation.py  test_pass2.py  test_pass2_chapter_aggregation.py  test_prompt_loader.py  test_rate_limit.py  test_runtime_anchors.py  test_runtime_and_modeling_routes.py  test_runtime_chat.py  test_runtime_engine.py  test_session_store.py  test_settings.py  test_text_decoding.py
(+86 files in other folders)
