[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "camo"
version = "0.1.0"
description = "Character Modeling & Simulation Base"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "alembic>=1.14.0,<2.0.0",
    "anthropic>=0.96.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "Jinja2>=3.1.4,<4.0.0",
    "jsonschema>=4.23.0,<5.0.0",
    "openai>=2.32.0,<3.0.0",
    "pgvector>=0.3.6,<1.0.0",
    "pydantic-settings>=2.6.1,<3.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "PyYAML>=6.0.2,<7.0.0",
    "SQLAlchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.30.6,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.3.4,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/camo"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
